<package>
  <name>move_group_python_interface</name>
  <version>0.0.1</version>
  <description>Python MoveGroup Interface Tutorial</description>

  <author email="mikeblautman@gmail.com">Mike Lautman</author>

  <maintainer email="mikeblautman@gmail.com">Mike Lautman</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_tutorials/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_tutorials</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <build_depend>python</build_depend>

  <run_depend>python</run_depend>
  <run_depend>python-pyassimp</run_depend>
  <run_depend>rospy</run_depend>

</package>
